--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>Cadastros</title>
 </head>
 
-<body>
+<body style="margin:0; padding:0;">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
